# RV32I

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IsaSim.c  IsaSim.cpp  LegacyLDSW.md  Makefile  README.md  cmake_install.cmake  globals.c  globals.h  instructions.c  instructions.h  isasim  opcodes.h
src/: example.c  example.h
task1/: shift2.s
